# ttl-hash-map-server

./: DockerFile  Makefile  README.md  docker-compose.yaml
l1-memory-cache/: CMakeLists.txt  DockerFile  main.cpp
l1-memory-cache/modules/key-value-container/src/: key-value-container.cpp
l1-memory-cache/modules/main_service/include/: config.hpp  service-interface.hpp
l1-memory-cache/modules/main_service/src/: service.cpp
l1-memory-cache/modules/parser/: CMakeLists.txt
l1-memory-cache/modules/parser/include/: parser.hpp
l1-memory-cache/modules/server/include/: server-interface.hpp  server.hpp
l1-memory-cache/modules/storage-manager/include/: storage-manager.hpp
l1-memory-cache/modules/storage-manager/src/: storage-manager.cpp
l1-memory-cache/modules/ttl-manager/: CMakeLists.txt
l1-memory-cache/modules/ttl-manager/include/: ttl-manager-interface.hpp
l1-memory-cache/modules/utils/: CMakeLists.txt
l1-memory-cache/modules/utils/include/: utils.hpp
l1-memory-cache/modules/value/include/: base-model.hpp  time-model.hpp
l1-memory-cache/modules/worker/include/: worker.hpp
l1-memory-cache/modules/worker/src/: worker.cpp
modules/key-value-container/: CMakeLists.txt
modules/key-value-container/include/: key-value-container.hpp
modules/key-value-container/src/: key-value-container.cpp
modules/main_service/: CMakeLists.txt
modules/main_service/include/: config.hpp  service.hpp
modules/main_service/src/: service.cpp
modules/parser/include/: parser-interface.hpp
modules/parser/src/: parser.cpp
modules/server/: CMakeLists.txt
modules/server/src/: server.cpp
modules/storage-manager/: CMakeLists.txt
modules/storage-manager/include/: concepts.hpp  storage-manager-interface.hpp  storage-manager.hpp
modules/storage-manager/src/: storage-manager.cpp
modules/ttl-manager/include/: ttl-manager.hpp
modules/ttl-manager/src/: ttl-manager.cpp
modules/value/: CMakeLists.txt
modules/value/include/: value.hpp
modules/value/src/: time-model.cpp  value.cpp
modules/worker/: CMakeLists.txt
modules/worker/include/: worker-interface.hpp
